[package]
name = "saltpack_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "saltpack_rs"

[dependencies]
sha2 = "0.10.6"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rmpv = "1.0"
serde_json = "1.0.128"
hmac-sha512 = "1.1.5"
log = "0.4.22"
env_logger = "0.11.5"
dryoc = "0.6.1"
